--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="icon" href="cgclogo.png">
     <script src="scripts.js"></script>
 
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://linkfork.co/">
+<meta property="og:title" content="LinkFork | Link Preview Customization">
+<meta property="og:description" content="LinkFork lets you shorten, and customize how your link will appear when shared on social media, for free.">
+<meta property="og:image" content="https://linkfork.co/images/poster.png">
+
     
     
 </head>
