--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://linkfork.co/">
-<meta property="og:title" content="LinkFork | Link Preview Customization">
-<meta property="og:description" content="LinkFork lets you shorten, and customize how your link will appear when shared on social media, for free.">
-<meta property="og:image" content="https://linkfork.co/images/poster.png">
+<meta property="og:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
+<meta property="og:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
+<meta property="og:image" content="cgclogo.png">
 
     
     
