--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="scripts.js"></script>
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://linkfork.co/">
+<meta property="og:url" content="https://maxwell-jc.github.io/corkgamecrafters">
 <meta property="og:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
 <meta property="og:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
 <meta property="og:image" content="cgclogo.png">
