--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <meta property="og:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
 <meta property="og:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
 <meta property="og:image" content="cgclogo.png">
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:alt" content="Cork Game Crafters Logo" />
 
     
     
