--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:url" content="https://maxwell-jc.github.io/corkgamecrafters">
 <meta property="og:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
 <meta property="og:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
-<meta property="og:image" content="cgclogo.png">
+<meta property="og:image" content="https://github.com/Maxwell-JC/corkgamecrafters/blob/main/cgclogo.png">
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:alt" content="Cork Game Crafters Logo" />
 
