--- a/index.html
+++ b/index.html
@@ -15,13 +15,36 @@
     <link rel="icon" href="cgclogo.png">
     <script src="scripts.js"></script>
 
-<meta property="og:type" content="website">
+<!-- HTML Meta Tags -->
+<title>Cork Game Crafters | Cork's Local Board Game Publishers</title>
+<meta name="description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
+
+<!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://maxwell-jc.github.io/corkgamecrafters">
+<meta property="og:type" content="website">
 <meta property="og:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
 <meta property="og:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
-<meta property="og:image" content="cgclogo.png">
-<meta property="og:image:type" content="image/png" />
-<meta property="og:image:alt" content="Cork Game Crafters Logo" />
+<!--
+  You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/{site_text}/{title_text}/{image_url}/og.png
+  Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+  For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+-->
+<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/maxwell-jc.github.io/Cork%20Game%20Crafters%20%7C%20Cork's%20Local%20Board%20Game%20Publishers/https%3A%2F%2Fgithub.com%2FMaxwell-JC%2Fcorkgamecrafters%2Fblob%2Fmain%2Fcgclogo.png/og.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="maxwell-jc.github.io">
+<meta property="twitter:url" content="https://maxwell-jc.github.io/corkgamecrafters">
+<meta name="twitter:title" content="Cork Game Crafters | Cork's Local Board Game Publishers">
+<meta name="twitter:description" content="Heya!! My name is Maxwell and I make Board Games, Card Games and Tabletop Games in Cork.">
+<!--
+  You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/{site_text}/{title_text}/{image_url}/og.png
+  Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+  For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+-->
+<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/maxwell-jc.github.io/Cork%20Game%20Crafters%20%7C%20Cork's%20Local%20Board%20Game%20Publishers/https%3A%2F%2Fgithub.com%2FMaxwell-JC%2Fcorkgamecrafters%2Fblob%2Fmain%2Fcgclogo.png/og.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     
     
