--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
   For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 -->
-<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/maxwell-jc.github.io/Cork%20Game%20Crafters%20%7C%20Cork's%20Local%20Board%20Game%20Publishers/https%3A%2F%2Fgithub.com%2FMaxwell-JC%2Fcorkgamecrafters%2Fblob%2Fmain%2Fcgclogo.png/og.png">
+<meta property="og:image" content="https://github.com/Maxwell-JC/corkgamecrafters/blob/79e2812c403bdbe65fdc273a3d1f9c3d067054b0/cgclogo.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -42,7 +42,7 @@
   Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
   For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 -->
-<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v4/maxwell-jc.github.io/Cork%20Game%20Crafters%20%7C%20Cork's%20Local%20Board%20Game%20Publishers/https%3A%2F%2Fgithub.com%2FMaxwell-JC%2Fcorkgamecrafters%2Fblob%2Fmain%2Fcgclogo.png/og.png">
+<meta name="twitter:image" content="https://github.com/Maxwell-JC/corkgamecrafters/blob/79e2812c403bdbe65fdc273a3d1f9c3d067054b0/cgclogo.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
