--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BPK70GLT4V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BPK70GLT4V');
+</script>
     
 </head>
 
